tried to fix gap for iphoneSE

--- a/scss/partials/_landing.scss
+++ b/scss/partials/_landing.scss
@@ -56,7 +56,7 @@ button {
     color: vars.$bg-desktop-color;
     font-family: vars.$regular-font;
     font-size: 1.2rem;
-    line-height: 1.8rem;
+    line-height: 1.5rem;
   }
 
   h4 {
@@ -258,6 +258,9 @@ article#sign_up {
   #scroll_box {
     top: 200px;
     // z-index: 999;
+    #quotes {
+      width: 94%;
+    }
   }
 
   #dot_container {
@@ -266,6 +269,21 @@ article#sign_up {
   article#sign_up {
     button.sign-in-link {
       top: 50vw;
+    }
+  }
+}
+@media only screen and (min-width: 300px) {
+  #scroll_box {
+    padding: 30px 33px 30px 30px; 
+    #intro_txt {
+      padding-right: 8vw;
+    }
+    //padding-right: 10vw;
+    p {
+      font-size: 1rem;
+    }
+    h4 {
+      font-size: 1.5rem;
     }
   }
 }
